final edits for the night to equine classes

--- a/196_303_AVS.htm
+++ b/196_303_AVS.htm
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML PUBLIC"-//W3C//DTD HTML 3.2 Final//EN">                   <HTML>                                                                   <HEAD>                                                                   <TITLE>Fall 2020 (Covid-19)<P>All of Robert Causey's Assignments</TITLE>                                        </HEAD>                                                                  <BODY bgcolor=white>                                                     <H1><CENTER>Fall Semester 2020<P>Covid-19 Semester<P>AVS 196 - Introduction to Equine Management Cooperative<br>AVS 303 - Equine Management Cooperative</CENTER></H1>                      <P>                                                                      <div align="center"><I>Updated Wednesday 18 November 2020</I></div>        
-<p style="font-size:20px">This page contains all the assignments required in AVS 196 and 303 this semester. Assignments are due by the end of finals week. In almost all cases each assignment has links to the learning resources necessary to complete it. If you need an extension I will happily accommodate you if you contact me at rcausey@maine.edu or phone 207-922-7475. <BR><BR>Good luck with finals and have a great summer. <BR><BR>
+<p style="font-size:20px">This page contains all the assignments required in AVS 196 and 303 this semester. Assignments are due by the end of finals week. In almost all cases each assignment has links to the learning resources necessary to complete it. If you need an extension I will happily accommodate you if you contact me at rcausey@maine.edu or phone 207-922-7475. <BR><BR>Good luck with finals and have a great break. <BR><BR>
 Robert </p>
 <H2>AVS 196 - Introduction to Equine Management Cooperative</H2>
 <p style="font-size:20px">The following three assignments are required to complete AVS 196</p>
 <blockquote>
-<A HREF= https://forms.gle/pMqQDv3U4fGvuQmo7> AVS 196/303 Lecture Quiz 1  </A> - <B>Integument, endocrine, digestive tract, environment</B>  <P>
+<A HREF= https://forms.gle/pEZtg2xCwdQnPx2MA> AVS 196/303 Lecture Quiz 1  </A> - <B>Integument, endocrine, digestive tract, environment</B>  <P>
 
-<A HREF= https://forms.gle/atXpXVzAj1iJpngs9 > AVS 196/303 Lecture Quiz 2 </A> - <B>Points of the horse, anatomy, lameness examination and gaits.</B><P>
+<A HREF= https://forms.gle/EnegQoveakrnabxd8> AVS 196/303 Lecture Quiz 2 </A> - <B>Points of the horse, anatomy, lameness examination and gaits.</B><P>
 
-<A HREF= https://forms.gle/WH79WhGXRTqgLMe59 > AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> <P>
+<A HREF= https://forms.gle/fQwSZJcnSZzCqyuX8> AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> <P>
 </blockquote>
 <BR><BR>
 <H2>AVS 303 - Equine Management Cooperative</H2>
@@ -16,20 +16,19 @@ Robert </p>
  </P><P><B>Lectures:</B><P>
 <blockquote>
 
-<A HREF= https://forms.gle/pMqQDv3U4fGvuQmo7> AVS 196/303 Lecture Quiz 1  </A> - <B>Integument, endocrine, digestive tract, environment</B>  <P>
+<A HREF= https://forms.gle/pEZtg2xCwdQnPx2MA> AVS 196/303 Lecture Quiz 1  </A> - <B>Integument, endocrine, digestive tract, environment</B>  <P>
 
-<A HREF= https://forms.gle/atXpXVzAj1iJpngs9 > AVS 196/303 Lecture Quiz 2 </A> - <B>Points of the horse, anatomy, lameness examination and gaits.</B><P>
+<A HREF= https://forms.gle/EnegQoveakrnabxd8> AVS 196/303 Lecture Quiz 2 </A> - <B>Points of the horse, anatomy, lameness examination and gaits.</B><P>
 
-<A HREF= https://forms.gle/WH79WhGXRTqgLMe59 > AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> <P>
+<A HREF= https://forms.gle/fQwSZJcnSZzCqyuX8> AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> <P>
 </blockquote>
 <B>Labs:</B><P>
-The four labs below are only required by students taking the class renotely. Students attending labs at Witter are not required to take complete these 4 online lab assignments, but may complete these as an optional exercise for review of the material. 
+<p style="font-size:20px">The four labs below are only required by students taking the class renotely. Students attending labs at Witter are not required to take complete these 4 online lab assignments, but may complete these as an optional exercise for review of the material.</p> 
 <blockquote>
 	<A HREF=https://robertcausey.github.io/horse_handling.htm> AVS 303 Lab 1 </A>- <B>Horse Handling </B> <P>
 <A HREF= https://forms.gle/wZxWE9Swn5WGF9Mb7 > AVS 303 Lab 2 </A> <B> - Longeing and gaits </B><P>
 <A HREF= https://forms.gle/AemahfixDEarJmza7> AVS 303 Lab 3</A> - <B>Lameness Observation and examination</B><P>
 	<A HREF= https://forms.gle/uAk5xu48BZyDiStA7> AVS 303 Lab 4 </A> - <B>Bandage Bloopers</B>
 </Blockquote>
-<BR><BR>
-
+<p style="font-size:20px">
 Again please do not hesitate to contact me if you have any questions: rcausey@maine.edu or phone/text 207-922-7475</p></BODY>                                                                  </HTML> 
