--- a/horse_handling.htm
+++ b/horse_handling.htm
@@ -12,7 +12,7 @@ After each video I have made a comment about a key point in the video, but there
 	<H3><A HREF=https://youtu.be/0Q7gv835_9g>01-Basic Horse Handling - Intro</A> </H3><p> 
 Things go better if you have a clear procedure for how to bring horse between stalls and paddocks<p>
 <H3><A HREF=https://youtu.be/dHq_lBVBdjQ>02-Bring in and chain </A></H3><p>
-The chain goes in the left side cheek piece, up, over the nose band, then clips to the right side, with the thumb latch to the outside.<p> 
+The chain goes in through the left side metal cheek ring, up, then down over the nose band, then clips to bottom of the right side cheek ring, with the thumb latch to the outside.<p> 
 <H3><A HREF=https://youtu.be/PGnMgJvrXoo>03-Lead rope</A></H3><p>
 Never wrap the lead rope around any part of your body, not even loosely.<p>
 <H3><A HREF=https://youtu.be/PmsCFAptJzA>04-Through the gate out</A></H3><p>
