--- a/196_303_AVS.htm
+++ b/196_303_AVS.htm
@@ -24,7 +24,7 @@ Robert </p>
 </blockquote>
 <B>Labs:</B><P>
 <p style="font-size:20px">The four labs below are only required by students taking the class renotely. Students attending labs at Witter are not required to take complete these 4 online lab assignments, but may complete these as an optional exercise for review of the material.</p> 
-<blbreakk>
+<blockquote>
 	<A HREF=https://forms.gle/sZVSMJ26wFcY5Lb2A> AVS 303 Lab 1 </A>- <B>Horse Handling </B> <P>
 <A HREF= https://forms.gle/wZxWE9Swn5WGF9Mb7 > AVS 303 Lab 2 </A> <B> - Longeing and gaits </B><P>
 <A HREF= https://forms.gle/AemahfixDEarJmza7> AVS 303 Lab 3</A> - <B>Lameness Observation and examination</B><P>
