--- a/horse_handling.htm
+++ b/horse_handling.htm
@@ -29,7 +29,7 @@ Leave the door slightly open so you have an escape route.<p>
 Hang halter on door neatly, with the chain attached to the botton ring of the halter.<p>
 <H3><A HREF=https://youtu.be/8qqTq7lgVns>11-Halter on and going out</A></H3><p>If the horse does not come to the stall door, go away. Don't go into the stall until she comes to the door.<p> 
 <H3><A HREF=https://youtu.be/6bcoO-cbu8Q>12-Release</A></H3><p>
-The halter stays on because it is a quick release halter. Back the horse into the paddock before releasing her.
+When putting horses back into the paddock, you should leave the halter on only if it is a quick release halter. (A quick release or breakaway halter has a leather section designed to break if the the halter gets caught.)
 </blockquote>
 </body>
 </html>
