--- a/196_303_AVS.htm
+++ b/196_303_AVS.htm
@@ -23,12 +23,12 @@ Robert </p>
 <A HREF= https://forms.gle/fQwSZJcnSZzCqyuX8> AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> <P>
 </blockquote>
 <B>Labs:</B><P>
-<p style="font-size:20px">The four labs below are only required by students taking the class renotely. Students attending labs at Witter are not required to take complete these 4 online lab assignments, but may complete these as an optional exercise for review of the material.</p> 
+<p style="font-size:20px">Students attending labs at Witter are not required to take complete these 4 online lab assignments, but may complete these as an optional exercise for review of the material. Students taking the class remotely should complete lab 1 (Horse Handling) and lab 3 (Lameness observation and examination). Labs 2 (Longeing and Gaits) and 4 (Bandage bloopers) are for self assessment only and are not required.</p> 
 <blockquote>
-	<A HREF=https://forms.gle/sZVSMJ26wFcY5Lb2A> AVS 303 Lab 1 </A>- <B>Horse Handling </B> <P>
-<A HREF= https://forms.gle/wZxWE9Swn5WGF9Mb7 > AVS 303 Lab 2 </A> <B> - Longeing and gaits </B><P>
-<A HREF= https://forms.gle/AemahfixDEarJmza7> AVS 303 Lab 3</A> - <B>Lameness Observation and examination</B><P>
-	<A HREF= https://forms.gle/uAk5xu48BZyDiStA7> AVS 303 Lab 4 </A> - <B>Bandage Bloopers</B>
+	<A HREF=https://forms.gle/sZVSMJ26wFcY5Lb2A> AVS 303 Lab 1 </A>- <B>Horse Handling</B> - Required if you are taking class remotely. <P>
+<A HREF= https://forms.gle/wZxWE9Swn5WGF9Mb7 > AVS 303 Lab 2 </A> <B> - Longeing and gaits </B> - Not required. For self assessment only<P>
+<A HREF= https://forms.gle/AemahfixDEarJmza7> AVS 303 Lab 3</A> - <B>Lameness Observation and examination</B> -  Required if you are taking the class remotely<P>
+<A HREF= https://forms.gle/uAk5xu48BZyDiStA7> AVS 303 Lab 4 </A> - <B>Bandage Bloopers</B> - Not required. For self-assessment only. <P>
 </Blockquote>
 <p style="font-size:20px">
 Again please do not hesitate to contact me if you have any questions: rcausey@maine.edu or phone/text 207-922-7475</p></BODY>                                                                  </HTML> 
