--- a/196_303_AVS.htm
+++ b/196_303_AVS.htm
@@ -10,20 +10,20 @@ Robert </p>
 
 <A HREF= https://forms.gle/fQwSZJcnSZzCqyuX8> AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> <P>
 </blockquote>
-<BR><BR>
+<p>
 <H2>AVS 303 - Equine Management Cooperative</H2>
- <p style="font-size:20px">The following 5 assignments are require to complete AVS 303. 
- </P><P><B>Lectures:</B><P>
+<p style="font-size:20px">The same three assignments are required to complete AVS 303.</P>
+<p style="font-size:20px"><B>Lectures:</B></p>
 <blockquote>
 
-<A HREF= https://forms.gle/pEZtg2xCwdQnPx2MA> AVS 196/303 Lecture Quiz 1  </A> - <B>Integument, endocrine, digestive tract, environment</B>  <P>
+	<A HREF= https://forms.gle/pEZtg2xCwdQnPx2MA> AVS 196/303 Lecture Quiz 1  </A> - <B>Integument, endocrine, digestive tract, environment</B>  <p>
 
-<A HREF= https://forms.gle/EnegQoveakrnabxd8> AVS 196/303 Lecture Quiz 2 </A> - <B>Points of the horse, anatomy, lameness examination and gaits.</B><P>
+<A HREF= https://forms.gle/EnegQoveakrnabxd8> AVS 196/303 Lecture Quiz 2 </A> - <B>Points of the horse, anatomy, lameness examination and gaits.</B><p>
 
-<A HREF= https://forms.gle/fQwSZJcnSZzCqyuX8> AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> <P>
+<A HREF= https://forms.gle/fQwSZJcnSZzCqyuX8> AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> 
 </blockquote>
-<B>Labs:</B><P>
-<p style="font-size:20px">Students attending labs at Witter are not required to take complete these 4 online lab assignments, but may complete these as an optional exercise for review of the material. Students taking the class remotely should complete lab 1 (Horse Handling) and lab 3 (Lameness observation and examination). Labs 2 (Longeing and Gaits) and 4 (Bandage bloopers) are for self assessment only and are not required.</p> 
+<p style="font-size:20px"><B>Labs:</B></p>
+<p style="font-size:20px"><B>Students attending labs at Witter are not required to take complete these 4 online lab assignments</B>, but may complete these as an optional exercise for review of the material. <br><br><B>Students taking the class remotely should complete lab 1 (Horse Handling) and lab 3 (Lameness observation and examination)</B>. Labs 2 (Longeing and Gaits) and 4 (Bandage bloopers) are for self assessment only and are not required.</p> 
 <blockquote>
 	<A HREF=https://forms.gle/sZVSMJ26wFcY5Lb2A> AVS 303 Lab 1 </A>- <B>Horse Handling</B> - Required if you are taking class remotely. <P>
 <A HREF= https://forms.gle/wZxWE9Swn5WGF9Mb7 > AVS 303 Lab 2 </A> <B> - Longeing and gaits </B> - Not required. For self assessment only<P>
