equine internship update

--- a/397_AVS.htm
+++ b/397_AVS.htm
@@ -1,38 +1,8 @@
-<!DOCTYPE HTML PUBLIC"-//W3C//DTD HTML 3.2 Final//EN">                   <HTML>                                                                   <HEAD>                                                                   <TITLE>Spring 2020 (Covid-19)<P>All of Robert Causey's Assignments</TITLE>                                        </HEAD>                                                                  <BODY bgcolor=white>                                                     <H1><CENTER>Spring semester May 2020<P>Covid-19 Semester<P>All of Robert Causey's Assignments</CENTER></H1>                      <P>                                                                      <div align="center"><I>Updated Thursday 30th April 2020</I></div>        
-<p style="font-size:20px">This page contains all the assignments required in all my classes this semester (Spring 2020 - Covid-19). Assignments are due by the end of finals week. In almost all cases each assignment has links to the learning resources necessary to complete it. If you need an extension I will happily accommodate you if you contact me at rcausey@maine.edu or phone 207-922-7475. <BR><BR>Good luck with finals and have a great summer. <BR><BR>
+<!DOCTYPE HTML PUBLIC"-//W3C//DTD HTML 3.2 Final//EN">                   <HTML>                                                                   <HEAD>                                                                   <TITLE>Fall 2020<P>AVS 397 Equine Internship </TITLE>                                        </HEAD>                                                                  <BODY bgcolor=white>                                                     <H1><CENTER>Fall Semester 2020<P>AVS 397 - Equine Internship <p>Assignments</CENTER></H1>                      <P>                                                                      <div align="center"><I>Updated Monday 23 November 2020</I></div>        
+<p style="font-size:20px">This page contains all the assignments required for AVS 397. Assignments are due by the end of finals week. Each assignment has links to the learning resources necessary to complete it. If you need an extension I will happily accommodate you if you contact me at rcausey@maine.edu or phone 207-922-7475. <BR><BR>Good luck with finals and have a great summer. <BR><BR>
 Robert </p>
-<H2>AVS 196 - Introduction to Equine Management Cooperative</H2>
-<p style="font-size:20px">The following three assignments are required to complete AVS 196</p>
-<blockquote>
-<A HREF= https://forms.gle/pMqQDv3U4fGvuQmo7> AVS 196/303 Lecture Quiz 1  </A> - <B>Integument, endocrine, digestive tract, environment</B>  <P>
-
-<A HREF= https://forms.gle/atXpXVzAj1iJpngs9 > AVS 196/303 Lecture Quiz 2 </A> - <B>Points of the horse, anatomy, lameness examination and gaits.</B><P>
-
-<A HREF= https://forms.gle/WH79WhGXRTqgLMe59 > AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> <P>
-</blockquote>
-<BR><BR>
-<H2>AVS 303 - Equine Management Cooperative</H2>
- <p style="font-size:20px">The following 5 assignments are require to complete AVS 303. 
- </P><P><B>Lectures:</B><P>
-<blockquote>
-
-<A HREF= https://forms.gle/pMqQDv3U4fGvuQmo7> AVS 196/303 Lecture Quiz 1  </A> - <B>Integument, endocrine, digestive tract, environment</B>  <P>
-
-<A HREF= https://forms.gle/atXpXVzAj1iJpngs9 > AVS 196/303 Lecture Quiz 2 </A> - <B>Points of the horse, anatomy, lameness examination and gaits.</B><P>
-
-<A HREF= https://forms.gle/WH79WhGXRTqgLMe59 > AVS 196/303 Lecture Quiz 3 </A> - <B>Lameness therapy, infectious diseases and vaccinations </B> <P>
-</blockquote>
-<B>Labs:</B><P>
-<blockquote>
-	<A HREF= AVS303_anatomylab-1.pdf> AVS 303 Lab 1 </A>- <B>More difficult part of the horse </B> <P>
-<A HREF= https://forms.gle/wZxWE9Swn5WGF9Mb7 > AVS 303 Lab 2 </A> <B> - Longeing and gaits </B><P></blockquote>
-<p style="font-size:20px">Two additional lab assignments below are added which are NOT REQUIRED. They are included for your interest and would have been done if we didn't lose time with Covid-19.</p><B>Optional Labs:</B>
-<Blockquote><A HREF= https://forms.gle/AemahfixDEarJmza7> AVS 303 Lab 3</A> - <B>Lameness Observation and examination</B> - NOT REQUIRED<P>
-	<A HREF= https://forms.gle/uAk5xu48BZyDiStA7> AVS 303 Lab 4 </A> - <B>Bandage Bloopers</B> - NOT REQUIRED
-</Blockquote>
-<BR><BR>
 <H2>AVS 397 - Equine Internship</H2>
- <p style="font-size:20px"><B>For 1 - 2 credits </B>please complete this case presentation in addition to your attendance and prior work on chores.
+ <p style="font-size:20px"><B>For 1 - 2 credits </B>please complete this case presentation (in addition to your attendance on chores if you are staying to help take care of the horses).
  </p><Blockquote>
 	<A HREF= https://forms.gle/wDQmZPxkVUaV8U847>Case Presentation </A><B>Navicular Bursa and Penetrating wounds of the Hoof</B><P>
 </Blockquote>
@@ -45,12 +15,4 @@ Robert </p>
 <blockquote>
 <A HREF= https://video.maine.edu/media/April+20+2020+U+of+Maine+Dave+Dawson+Presentation+Business/1_6lt8liwu>Review of Dave Dawson's Talk </A>Executive Director of the North East Association of Equine Practitioners 
 </blockquote>
-<BR><BR>
-<H2>AVS 353 - Equine Reproduction</H2>
- <p style="font-size:20px">To complete equine reproduction you need to complete these 4 quizzes.</P>
-<A HREF= https://forms.gle/dGWZKQtGn7UWAxVe7>AVS 353 Quiz 1 </A>- <B>Anatomy, seasonality, and estrous cycle</B><P>
-<A HREF=https://forms.gle/UPrtJNCCh2NDbeyn9 >AVS 353 Quiz 2 </A>- <B>Endocrinology of Pregnancy </B><P>
-<A HREF= https://forms.gle/u63dt19jfWgP3Axo7 >AVS 353 Quiz 3 </A> - <B>Pregnancy and Foaling </B><P>
-<A HREF=https://forms.gle/Vex4FxVR4ktGgqUH6>AVS 353 Quiz 4 </A>- <B>Reproductive Biology of the Stallion </B>
-<p style="font-size:20px">
 Again please do not hesitate to contact me if you have any questions: rcausey@maine.edu or phone/text 207-922-7475</p></BODY>                                                                  </HTML> 
