--- a/196_303_AVS.htm
+++ b/196_303_AVS.htm
@@ -2,8 +2,8 @@
 <p style="font-size:20px">This page contains all the assignments required in AVS 196 and 303 this semester. Assignments are due by the end of finals week. Each assignment has links to the learning resources necessary to complete it. If you need an extension I will happily accommodate you if you contact me at rcausey@maine.edu or phone 207-922-7475. <BR><BR>Good luck with finals and have a great break. <BR><BR>
 Robert </p>
 <p style="font=size:20px">
-<A HREF=>Link to Google Drive with course materials</A><BR><BR>
-<A HREF=>Link to AVS 303 play list with all videos.</A> This semester's lectures can be found at the end of the play list, starting at #40. </p>
+<A HREF=https://drive.google.com/drive/folders/1REXzGiiGoEPpluJ5go44bpypHPkxazdu?usp=sharing>Link to Google Drive with course materials</A><BR><BR>
+<A HREF=https://video.maine.edu/playlist/details/1_izu98m7a>Link to AVS 303 play list with all videos.</A> This semester's lectures can be found at the end of the play list, starting at #40. </p>
 <H2>AVS 196 - Introduction to Equine Management Cooperative</H2>
 <p style="font-size:20px">The following three assignments are required to complete AVS 196</p>
 <blockquote>
