--- a/AVS196_303/AVS303_Lecture_Material/schedule.htm
+++ b/AVS196_303/AVS303_Lecture_Material/schedule.htm
@@ -1,4 +1,11 @@
-001.Horseriding.pptx.pdf
+<!DOCTYPE html>
+<html>
+	<head></head>
+	<body>
+		<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/101.vaccinationguidlines.pdf> Vaccinataions </A>
+	</body>
+</html>
+<!--001.Horseriding.pptx.pdf
 002_fall2019_avs303_schedule.pdf
 010.SyllabusAVS303spring2019.pdf
 034.Basic Colors and Markings of Horses.pdf
@@ -53,4 +60,4 @@ SharedScreenshot303.jpg
 anthelmintics (dewormers).pdf
 anthelmintics.pdf
 internal parasites.pdf
-schedule.txt
+schedule.txt -->
