edits to schedule.htm

--- a/AVS196_303/AVS303_Lecture_Material/schedule.htm
+++ b/AVS196_303/AVS303_Lecture_Material/schedule.htm
@@ -21,7 +21,7 @@
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/044_ColicPrevalence_p17.pdf>Colic Risk Factors</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/047_AAEP_ParasiteControlGuidelines.pdf>Detailed Parasite Control Guidelines</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/047_Brief_Parasite_Control.pdf>Parasite Control in Brief</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/047_anthelmintics.pdf>Common Dewormers</A><p>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/047_common_anthelmintics.pdf>Common Dewormers</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/047_cusa_anth_2500.pdf>Extensive list of dewormers</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/048_wormsandcolic.pdf>Brief Review Questions on Worms and Colic</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/051_basic-pasture-management-for-the-equine-owner.pdf>Basic Pasture Management</A><p>
@@ -34,7 +34,7 @@
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/081_cg_partsofhorse.pdf>Excerpt from 4h horse manual</A> <p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/081_partsofhorse2.pdf>More difficult parts of the horse</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/082_gaits.pdf>Gait (walk trot canter etc)</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/083_tendons_pptx.pdf>Tendons and tendon sheaths</A><p>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/083_tendons.pptx.pdf>Tendons and tendon sheaths</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/083_ligaments.tiff.pdf>Important ligaments of the horse</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/084_Lamenessexam.pptx.optimized.pdf>Lameness Examination</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/084_Lamenessexam.xlsx.pdf>Practice sheet for lameness exams</A><p>
