--- a/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
+++ b/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
@@ -1,61 +1,65 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
+	<head>AVS 303 Equine Management Cooperative</head>
 	<body>
-
-	
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/010_SyllabusAVS303spring2019.pdf>Syllabus</A><p>
+		<center><H2> Course Written  Materials and Quizzes
+			</H2></center>
+		<H3>Course Syllabus</H3><blockquote>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/SyllabusAVS303spring2021.pdf>Syllabus</A><p>
+		</blockquote>	<H3>Horse Identification </H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Basic_Colors_Markings.pdf>Coat Color and Markings</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Horse_ID.pdf>Horse Identification</A><p>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Horse_ID.pdf>Horse ID chart</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/036_coatcolorgenetics.pdf>Coat Color Genetics</A><p>
+		</blockquote>	<H3>Physical Examination and Body Condition Scoring </H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/037_BCS.pdf>Body Condition Scoring</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/038_insulinresistance.pdf>Insulin Resistance</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/039_Spring2016_mareID.xls.pdf>Mare ID chart</A><p>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/042_physical_exam1.pptx.optimized.pdf>Physical Examination</A><p>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/042_physical_exam2.pdf>Physical Exam Sheet</A><p>
+		</blockquote>	<H3>Digestion - Gut anatomy, nutrtion and feeding</H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/040_articles.extension.org-Feeding_Management.pdf>Feeding</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/040_atgutdiagram1.jpg>Gut Dagram</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/040_awag_bos_map.gif>Logan Airport</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/040_gutdiagram2.jpg>Another gut diagram</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/041_articles.extension.org-Nutrients.pdf>Nutrients</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/042_physical_exam1.pptx.optimized.pdf>Physical Examination</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/042_physical_exam2.pdf>Physical Exam Sheet</A><p>
+		</blockquote>	<H3>Colic and Gut Parasites</H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/044_ColicPrevalence_p17.pdf>Colic Risk Factors</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/047_AAEP_ParasiteControlGuidelines.pdf>Detailed Parasite Control Guidelines</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/047_Brief_Parasite_Control.pdf>Parasite Control in Brief</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/047_common_anthelmintics.pdf>Common Dewormers</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/047_cusa_anth_2500.pdf>Extensive list of dewormers</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/048_wormsandcolic.pdf>Brief Review Questions on Worms and Colic</A><p>
+		</blockquote>	<H3>The Environment </H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/051_basic-pasture-management-for-the-equine-owner.pdf>Basic Pasture Management</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/052_Plants_Poisonous_Livestock.pdf>Poisonous PLants</A><p>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/052_Plants_Poisonous_Livestock.pdf>Poisonous Plants</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/053_manure_management.pdf>Compost and Manure Management</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/060_Winter_Horse_Care.pdf>Winter Care of Horses</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/061_7-Day_Forecast.pdf>Sample 7 day forecast</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/062_Hourly_Forecast.pdf>Sample Hourly Forecast</A><p>
+		</blockquote>	<H3>Musculoskeletal System</H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/081_apartsofhorse1.pdf>Parts of the horse we should know</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/081_cg_partsofhorse.pdf>Excerpt from 4h horse manual</A> <p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/081_partsofhorse2.pdf>More difficult parts of the horse</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/082_gaits.pdf>Gait (walk trot canter etc)</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/083_tendons.pptx.pdf>Tendons and tendon sheaths</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/083_ligaments.tiff.pdf>Important ligaments of the horse</A><p>
+		</blockquote>	<H3>Lameness</H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/084_Lamenessexam.pptx.optimized.pdf>Lameness Examination</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/084_Lamenessexam.xlsx.pdf>Practice sheet for lameness exams</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/086_Lameness_Therapy.pptx.pdf>Principles of therapy for lameness</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/086_bandaging_pptx_optimized.pdf>How to bandage the lower legs</A><p>
+		</blockquote>	<H3>Infectious Diseases</H3> <blockquote>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Miscellaneous_1_Bacterial_Diseases.pdf>Various Bacterial Diseases</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Diarrhea_1_Salmonellosis.pdf>Salmonella Infections in Horses.</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Diarrhea_2_Equine_Enteric_Coronavirus.pdf>Equine Coronavirus</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Diarrhea_3_Potomac_Horse_Fever.pdf>Potomac Horse Fever</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Miscellaneous-2_equine_infectious_anemia.pdf>Equine Infectious Anemia</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Miscellaneous_1_Bacterial_Diseases.pdf>Various Bacterial Diseases</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Respiratory_1_Equine_Herpesvirus.pdf>Equine Herpes Virus Infections</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Respiratory_2_Equine_Influenza.pdf>Equine Flu</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/090_Respiratory_3_Equine_Viral_Arteritis.pdf>Equine Viral Arteritis (EVA)</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/100_infectious_diseases.pdf>Review Questions on Infectious Diseases</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/101_vaccinationguidelines.pdf>Vaccination Guide Lines</A><p>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/100_infectious_diseases.pdf>Review Questions on Infectious Diseases</A><p>
+		</blockquote>	<H3>Self-Assessment</H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/200_skillsassessment.xlsx.pdf>Checklist of Skills you should accomplish.</A><p>
-	
-	
-	
-	
-	
-	
+		</blockquote>
 	</body>
 </html>
