--- a/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
+++ b/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
@@ -5,8 +5,28 @@
 		<center><H2> Course Written  Materials and Quizzes
 			</H2></center>
 		<H3>Course Syllabus</H3><blockquote>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/SyllabusAVS303spring2021.pdf>Syllabus</A><p>
-		</blockquote>	<H3>Horse Identification </H3> <blockquote>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/002_SyllabusAVS303spring2021.pdf>Syllabus</A><p></blockquote>
+		<H3>Welcome to the Witter Center</H3><blockquote>
+			Hi everyone: Welcome to AVS 303! We very glad to have you. To begin, here are some "virtual chores" we need you to do. It is just some paperwork and documentation of various trainings in the links below.<p>
+In summary you will need to do the following (if you are taking the class remotely just do 2, 3 and 4):<p>
+1. Fill out form with emergency contact information, release and assumption of risk agreement, helmet policy and riding protocols -first think you should do.<p>
+2. On-line basic safety training -by February 1st 2021<p>
+3. On-line farm training - by February 1st 2021 <p>
+4. Horse handling training lab with Cassie Astle - second week of class<p>
+5. John Deere Training with Robert Causey - second  and third week of class<p>
+
+			
+<A HREF=https://forms.gle/KbDZEwdoTM36or9C9>One link to </A><blockquote>Emergency Contact<BR>Release and Assumption of Risk<BR> Riding protocol<BR> Helmet policy<BR> Basic safety training certification<BR>Farm safety training certification</blockquote>
+<A HREF=https://video.maine.edu/media/How+to+do+basic+and+farm+online+safety+training/1_tvds6d8j>Video </A> to show how to do basic and farm safety training (this is a rather clunky video I did for folks in AVS 146)<p>
+<A HREF=https://mycampus.maine.edu/group/mycampus/safety-environmental-management>Link to</A> annual and basic safety training<p>
+<!--
+<A HREF=>LINKTEXT</A><p>
+<A HREF=>LINKTEXT</A><p>
+<A HREF=>LINKTEXT</A><p>
+<A HREF=>LINKTEXT</A><p>
+-->
+		</blockquote>
+			<H3>Horse Identification </H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Basic_Colors_Markings.pdf>Coat Color and Markings</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Horse_ID.pdf>Horse ID chart</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/036_coatcolorgenetics.pdf>Coat Color Genetics</A><p>
