--- a/AVS196_303/AVS303_Lecture_Material/901_Lecture_Video_Archive.htm
+++ b/AVS196_303/AVS303_Lecture_Material/901_Lecture_Video_Archive.htm
@@ -3,7 +3,7 @@
 <html>
 	<head></head>
 	<body>
-		<center><H2> AVS303 Video Archive </H2></center>
+		<center><H2> AVS303 Lecture Video Archive </H2></center>
 		<H3>Course Syllabus</H3><blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/SyllabusAVS303spring2021.pdf>Syllabus</A><p>
 		</blockquote>	<H3>Horse Identification </H3> <blockquote>
