--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <H3>Links to courses</H3>
 <blockquote>
 <A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm>AVS 146 - Introduction to Animal Science Laboratory</A><p>
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material>AVS 196 - Introduction to Equine Management Cooperative</A><p> 
-<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material>AVS 303 - Equine Management Cooperative</A><p>
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm>AVS 196 - Introduction to Equine Management Cooperative</A><p> 
+<A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm>AVS 303 - Equine Management Cooperative</A><p>
 <A HREF=REPRO.HTM>AVS 353 - Equine Reproduction and Breeding Management</A><p>
 <A HREF=stblec1.htm>AVS 393 - Training the Standardbred Horse</A><p>
 <A HREF=397_AVS.htm>AVS 397 - Equine Intership</A><p>
