--- a/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
+++ b/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head>AVS 303 Equine Management Cooperative</head>
-	<body>
-		<center><H2> Course Written  Materials and Quizzes
+	<head><style>                                                                  h1 { font-size:35px;}                                                    body {                                                                   color:black;      font-size:25px;                                        }                                                                        a {                                                                                color: DarkMagenta;                                            }                                                                        </style>                                                                 </HEAD>                                                                  <BODY bgcolor=GainsBoro> 
+		<center><H2> AVS 303 - Introduction to Equine Cooperative<br>Lecture Materials and Quizzes
 			</H2></center>
 		<H3>Course Syllabus</H3><blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/002_SyllabusAVS303spring2021.pdf>Syllabus</A><p></blockquote>
-		<H3>Welcome to the Witter Center</H3><blockquote>
+		<H3>First things to do and welcome to the Witter Center</H3><blockquote>
 			Hi everyone: Welcome to AVS 303! We very glad to have you. To begin, here are some "virtual chores" we need you to do. It is just some paperwork and documentation of various trainings in the links below.<p>
 In summary you will need to do the following (if you are taking the class remotely just do 2, 3 and 4):<p>
 1. Fill out form with emergency contact information, release and assumption of risk agreement, helmet policy and riding protocols -first think you should do.<p>
@@ -26,6 +25,7 @@ In summary you will need to do the following (if you are taking the class remote
 <A HREF=>LINKTEXT</A><p>
 -->
 		</blockquote>
+		<center><H2>Lecture Topics</H2></center>
 			<H3>Horse Identification </H3> <blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Basic_Colors_Markings.pdf>Coat Color and Markings</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/034_Horse_ID.pdf>Horse ID chart</A><p>
