checking index.html

--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <HTML>
 <HEAD>
 <TITLE>Robert's home page</TITLE>
+<style>
+h1 { font-size:35px;}
+body {
+color:black;	  font-size:25px;
+}
+a {
+	  color: DarkMagenta;
+}
+</style>
 </HEAD>
-<BODY bgcolor=white>
-<H1><CENTER>Robert Causey's home page</CENTER></H1>
+<BODY bgcolor=GainsBoro>
+<H1><CENTER>Robert Causey - Helpful Links for Students</CENTER></H1>
 <P>
-<div align="right"><I>Updated Thursday 19th November 2020</I></div>
-<center>
+<div align="right"><I>Updated Tuesday 26th January 2021</I></div>
+<!--<center>
 <H2> Link to Assignments List for AVS 146 </H2>
 		<A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm> Assignments needed to complete AVS146</A>
 </center>
+-->
 <H3>Resources for advisees</H3>
 <blockquote>
 <p>
@@ -34,9 +44,9 @@
 <A HREF= http://robertcausey.github.io/AVS146/To_Do_List_AVS146.htm>AVS 146 - Introduction to Animal Science Laboratory</A><p>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm>AVS 196 - Introduction to Equine Management Cooperative</A><p> 
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm>AVS 303 - Equine Management Cooperative</A><p>
-<A HREF=REPRO.HTM>AVS 353 - Equine Reproduction and Breeding Management</A><p>
-<A HREF=stblec1.htm>AVS 393 - Training the Standardbred Horse</A><p>
-<A HREF=397_AVS.htm>AVS 397 - Equine Intership</A><p>
+<A HREF=https://robertcausey.github.io/AVS353/REPRO.HTM>AVS 353 - Equine Reproduction and Breeding Management</A><p>
+<A HREF=https://robertcausey.github.io/AVS393/stblec1.htm>AVS 393 - Training the Standardbred Horse</A><p>
+<A HREF=https://robertcausey.github.io/AVS397/397_AVS.htm>AVS 397 - Equine Intership</A><p>
 </blockquote>
 <H3>Safety Links</H3>
 <blockquote>
