fixing 900_lecture_material

--- a/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
+++ b/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head><style>                                                                  h1 { font-size:35px;}                                                    body {                                                                   color:black;      font-size:25px;                                        }                                                                        a {                                                                                color: DarkMagenta;                                            }                                                                        </style>                                                                 </HEAD>                                                                  <BODY bgcolor=GainsBoro> 
-		<center><H2> AVS 303 - Introduction to Equine Cooperative<br>Lecture Materials and Quizzes
+		<center><H2> AVS 196/303 - Introduction to Equine Cooperative<br>Lecture Materials and Quizzes
 			</H2></center>
 		<H3>Course Syllabus</H3><blockquote>
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/002_SyllabusAVS303spring2021.pdf>Syllabus</A><p></blockquote>
