--- a/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
+++ b/AVS196_303/AVS303_Lecture_Material/900_lecture_materials.htm
@@ -7,7 +7,7 @@
 <A HREF=https://robertcausey.github.io/AVS196_303/AVS303_Lecture_Material/002_SyllabusAVS303spring2021.pdf>Syllabus</A><p></blockquote>
 		<H3>First things to do and welcome to the Witter Center</H3><blockquote>
 			Hi everyone: Welcome to AVS 303! We very glad to have you. To begin, here are some "virtual chores" we need you to do. It is just some paperwork and documentation of various trainings in the links below.<p>
-In summary you will need to do the following (if you are taking the class remotely just do 2, 3 and 4):<p>
+In summary you will need to do the following (if you are taking the class remotely just do 2 and 3):<p>
 1. Fill out form with emergency contact information, release and assumption of risk agreement, helmet policy and riding protocols -first think you should do.<p>
 2. On-line basic safety training -by February 1st 2021<p>
 3. On-line farm training - by February 1st 2021 <p>
