--- a/AVS353/REPRO.HTM
+++ b/AVS353/REPRO.HTM
@@ -76,8 +76,9 @@ Quiz 1.  Detailed quiz of <A HREF=QUIZ1.HTM>anatomy, seasonality, and estrous cy
 Quiz 2.  Detailed quiz of <A HREF=QUIZ2.HTM>endocrinology of pregnancy.</A>  <P> Quiz 3.  Detailed quiz of <A HREF=QUIZ3.HTM>management of pregnancy and foaling.</A>  <P> Quiz 4.  Detailed quiz of <A HREF=QUIZ4.HTM>stallion anatomy and physiology.</A>  <P> 
 Quiz 5.  Detailed quiz of <A HREF=QUIZ5.HTM>drug use in equine reproduction.</A>  <P>
 </Blockquote>
- 
- <P><B>Review of Mammalian Reproduction</B></P>
+<P><B>Aristotle's View of Horse Reproduction</B></P>
+<Blockquote>A translation from The History of Animals Book 6, part 22<P><A HREF=Aristotle_HA_VI_22.htm>click here</A></Blockquote> <P><B>Reproductive Anatomy of the Mare</B></P>
+<P><B>Review of Mammalian Reproduction</B></P>
 </B><P><Blockquote>A description in simple terms of the basic events of reproduction in mammals<P><A HREF=BASEREP.HTM>click here for notes</A></Blockquote> <P><B>Reproductive Anatomy of the Mare</B></P>
 </B><P><Blockquote>A description of the arrangement of the reproductive organs of the mare, including ovaries, uterus, external genitalia, and nervous tissue. <P><A HREF=REPANAT.HTM>click here for notes</A></Blockquote>
 <B>
