More edits to AVS353

--- a/AVS353/REPRO.HTM
+++ b/AVS353/REPRO.HTM
@@ -4,17 +4,13 @@
 <TITLE>AVS 353 Equine Reproduction and Breeding Management</TITLE>
 </HEAD>
 <BODY bgcolor=white>
- 
 <TITLE>AVS 353 Equine Reproduction and Breeding Management</TITLE>
 </HEAD>
 <BODY BGCOLOR=WHITE>
- 
 <H3><Center>AVS 353 Equine Reproduction and Breeding Management<BR>
 Robert C. Causey DVM, PhD, Dip ACT</H3><BR>
-207-922-7475 or E-Mail Robert Causey on First Class</Center></P>
+Phone 207-922-7475 or E-Mail rcausey@maine.edu </Center></P>
 </P>
- 
- 
 <B>Course Objectives:</P></B>
 <Blockquote>
 - To teach students the basic reproductive biology of the mare and stallion.</P>
@@ -24,26 +20,24 @@ Robert C. Causey DVM, PhD, Dip ACT</H3><BR>
 -To acquaint students with techniques of assisted equine reproduction (artificial insemination, semen freezing, and embryo transfer).</P>
 </P>
 </Blockquote>
- 
 <B>Grading:</P>
 </B><Blockquote>Students will be provided 5 take home quizzes.  Students will also be required to write a paper. The format will be an article for suitable for submission to "Equus" magazine on a subject for lay audiences within the field of equine reproduction.  Topics might include "How to manage your mare for breeding" "The Equine Estrous Cycle" or "Pregnancy in the mare" etc. </P>
 </P>
 Grading will be calculated as follows:</P>
 </P>
- 
 On a 100 point scale, A=90-100, B=80-89, C=70-79, D=60-69.<P>
 Quiz 1 = 30% <BR>
 Quiz 2, 3, 4, and 5 = 10% each, 40 % total<BR>
 (Article = 10%. May be subtituted for one of quizzes 2, 3, 4 or 5. If you wish to receive 1 additional credit on your transcript for writing the article register for AVS 368, but all five quizzes would be required for AVS 353 in that case.)<BR>
 Attendance and class participation =30%</P>
 </P>
- 
 </Blockquote>
 <B>Reference Material:</P>
 </B>
 <Blockquote>Class notes will be provided by the instructor on the web.</P>
 <B></P>
-</B>No text is required for this class. 
+</B>No text is required for this class.<P>
+A video archive of lectures and videos may be accessed <A HREF=video_archive_AVS353.htm>here</A>
 </Blockquote></P>
 <B>Course Policies:</B>
 <Blockquote>
@@ -53,19 +47,13 @@ Attendance and class participation =30%</P>
 <i>Students with disabilities statement:</i> If you have a disability for which you may be requesting an accommodation, please contact Ann Smith, Director of Disabilities Services, 121 East Annex, 581-2319, as early as possible in the term. </p>
 <p>
 <i>Sexual Discrimination Reporting:</i> The University of Maine is committed to making campus a safe place for students. Because of this commitment, if you tell a teacher about an experience of sexual assault, sexual harassment, stalking, relationship abuse (dating violence and domestic violence), sexual misconduct or any form of gender discrimination involving members of the campus, your teacher is required to report this information to the campus Office of Sexual Assault & Violence Prevention or the Office of Equal Opportunity.<P>
-
 If you want to talk in confidence to someone about an experience of sexual discrimination, please contact these resources:<p>
-
 For confidential resources on campus: Counseling Center: 207-581-1392 or Cutler Health Center: at 207-581-4000.<br>
 For confidential resources off campus:  Rape Response Services: 1-800-310-0000 or Spruce Run: 1-800-863-9909. <p>
-
 Other resources:  The resources listed below can offer support but may have to report the incident to others who can help:<p>
-
 For support services on campus: Office of Sexual Assault & Violence Prevention: 207-581-1406, Office of Community Standards: 207-581-1409, University of Maine Police: 207-581-4040 or 911. Or see the OSAVP website for a complete list of services at http://www.umaine.edu/osavp/<p>
 </Blockquote>
 <B></P>
- 
- 
  </P>
 </P>
 <h3><center>Syllabus</center></h3></P>
@@ -77,7 +65,7 @@ Quiz 2.  Detailed quiz of <A HREF=QUIZ2.HTM>endocrinology of pregnancy.</A>  <P>
 Quiz 5.  Detailed quiz of <A HREF=QUIZ5.HTM>drug use in equine reproduction.</A>  <P>
 </Blockquote>
 <P><B>Aristotle's View of Horse Reproduction</B></P>
-<Blockquote>A translation from The History of Animals Book 6, part 22<P><A HREF=Aristotle_HA_VI_22.htm>click here</A></Blockquote> <P><B>Reproductive Anatomy of the Mare</B></P>
+<Blockquote>A translation from The History of Animals Book 6, part 22<P><A HREF=Aristotle_HA_VI_22.htm>click here</A></Blockquote>
 <P><B>Review of Mammalian Reproduction</B></P>
 </B><P><Blockquote>A description in simple terms of the basic events of reproduction in mammals<P><A HREF=BASEREP.HTM>click here for notes</A></Blockquote> <P><B>Reproductive Anatomy of the Mare</B></P>
 </B><P><Blockquote>A description of the arrangement of the reproductive organs of the mare, including ovaries, uterus, external genitalia, and nervous tissue. <P><A HREF=REPANAT.HTM>click here for notes</A></Blockquote>
